--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@remix-run/node": "^2.9.1",
     "@remix-run/react": "^2.9.1",
     "@remix-run/serve": "^2.9.1",
+    "@remix-validated-form/with-zod": "^2.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "isbot": "^4.1.0",
@@ -36,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-toastify": "^10.0.5",
+    "remix-validated-form": "^5.1.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.6"
